--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "express-session": "^1.16.2",
         "flash": "^1.1.0",
         "formidable": "^1.2.1",
+        "fs": "0.0.1-security",
         "http-server": "^0.12.3",
         "log4js": "^6.1.0",
         "moment": "^2.24.0",
@@ -63,6 +64,7 @@
         "request": "^2.88.0",
         "resume-parser": "^1.1.0",
         "rimraf": "^3.0.0",
+        "save": "^2.4.0",
         "sessionstorage": "^0.1.0",
         "uuid": "^3.3.2",
         "winston": "^3.2.1"
